output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_50.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_50.py", line 80
    /* pos[0] == 2 */ durations[2]))
    ^
SyntaxError: invalid syntax
